--- a/MLHUB.yaml
+++ b/MLHUB.yaml
@@ -11,7 +11,7 @@ meta:
 dependencies:
   pip3: requests, uuid
   files:
-    - https://mlhub.ai/empty.txt: private.py
+    - https://mlhub.ai/empty.txt: private.txt
     - README.md
     - demo.py
     - utils.py
